--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -24,7 +24,7 @@
  <!-- Navbar start-->
  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
    <div class="container-fluid">
-     <a class="navbar-brand" href="#">Skate! Newsletter</a>
+     <a class="navbar-brand" href="#">The LA Star</a>
      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
        <span class="navbar-toggler-icon"></span>
      </button>
@@ -137,7 +137,10 @@
 Within a week in the new position, she was galvanized. She could not believe what traffickers were getting away with on the Blade. When Armendariz was 13, she had been in the youth cadet program and was focused on roller skating and Taylor Swift and the annual family trip to Disneyland. But here were girls whose faces had been burned with cigarette butts; whose nails had been pulled off; whose hair had been set on fire; or who had been held down in a bathtub and shocked with a Taser. There were stories of girls who had simply disappeared.
  </div>
 
- image
+ <center>
+      <a> <img src="pantone.png" alt="Pantone colors" style="width:800px;height:600px;"> </a> 
+      <div> <p class="caption"> Pantone colors on ground. (Source: Pantone).</p> </div>
+</center>
 
 <div class="chapter"> 
   <p>She wanted evidence to put traffickers behind bars. She worked overtime and conducted rescue operations even on her days off in the hopes of persuading girls to identify them. But the girls rarely complied. Most felt a deep psychological tie to their traffickers, the most consistent authority figure they had ever known. Others knew that flipping on them meant being hunted down as soon as their traffickers were released.</p>
@@ -148,7 +151,10 @@ Within a week in the new position, she was galvanized. She could not believe wha
 <p>It was a similar cycle of rescues with Ashley, and Kayla, and Saphira, and Malaika and Margie Ruth. After interviewing each girl, Armendariz kept her company for hours until someone from the Department of Children and Family Services came to pick her up. In theory, D.C.F.S. staff would take the girl to a hospital for a health screening and then to a temporary housing placement, before ultimately finding her a new foster household or group home. But time after time, the agency reported back to Armendariz that the girl had jumped from the car as soon as it pulled out of the station. The agency estimates that three out of four rescued preteens and teenagers go back to their traffickers. (Brandon Nichols, the director of the county’s D.C.F.S., said that “our social workers do everything possible, as many times as necessary, to help these young people safely leave their captors and begin healing on their own terms.”)</p>
 </div>
 
- image
+ <center>
+      <a> <img src="pantone.png" alt="Pantone colors" style="width:800px;height:600px;"> </a> 
+      <div> <p class="caption"> Pantone colors on ground. (Source: Pantone).</p> </div>
+</center>
 
  <div class="chapter"> 
   <p>Armendariz started her report about the girl with the white hair bow. Her name was Jeziah, and she was 17. According to the logs, tonight’s rescue was her first, and Armendariz could tell: She was the first girl in a long time who said she wanted help getting out.</p>
@@ -172,7 +178,10 @@ Within a week in the new position, she was galvanized. She could not believe wha
 </div>
 
 
-image
+ <center>
+      <a> <img src="pantone.png" alt="Pantone colors" style="width:800px;height:600px;"> </a> 
+      <div> <p class="caption"> Pantone colors on ground. (Source: Pantone).</p> </div>
+</center>
 
  <div class="chapter"> 
   <p>With Forsythe, Ana began to experience childhood anew: bedtime stories, warm milk before bed, a kitchen play set for toddlers that entertained her for hours. They marked her height on the wall in the hallway and visited Disneyland, where Ana picked the treat she had always secretly wanted: a Mickey Mouse balloon that lit up in the dark. Forsythe helped Ana get her traffickers’ tattoos removed and go back to school, where she became vice president of the student council. Ana began volunteering to fight human trafficking and started college classes to become a nurse.</p>
@@ -192,7 +201,10 @@ image
   <p>On Thursday night, Armendariz stood at 70th and Figueroa in a black mesh top and pumps, her purse outfitted with a recording device. She dangled a strip of condoms from her bra strap. She knew there was only so much evidence she could gather secondhand, and at 4-foot-10, Armendariz could pass as a juvenile in the dark. Now cars were lining up for her.</p>
 </div>
 
-image
+ <center>
+      <a> <img src="pantone.png" alt="Pantone colors" style="width:800px;height:600px;"> </a> 
+      <div> <p class="caption"> Pantone colors on ground. (Source: Pantone).</p> </div>
+</center>
 
 <div class="chapter"> 
   <p>Are you OK if we do it in the car?” she asked a man in a Raiders hoodie and sweats. His Nissan Altima hummed.</p>
@@ -210,7 +222,10 @@ image
 <p>Armendariz was chasing that same high tonight, pacing the corner across from a senior center and trying her hardest to look nervous. She smoothed the netting on her top and rubbed the side of her neck. Seven different traffickers came circling. One — driving a blue Mercedes — asked who she worked for and then went to drop off girls farther down the Blade.</p>
 </div>
 
-image
+ <center>
+      <a> <img src="pantone.png" alt="Pantone colors" style="width:800px;height:600px;"> </a> 
+      <div> <p class="caption"> Pantone colors on ground. (Source: Pantone).</p> </div>
+</center>
 
 <div class="chapter"> 
   <p>“He’ll be back,” Armendariz texted to undercover officers who were watching from nearby. But she was wrong. They had lost him.</p>
@@ -235,7 +250,10 @@ image
 <p>Ana didn’t know that Forsythe, too, was on Figueroa that night, passing out hand warmers and hotline-inscribed bracelets that Ana herself had designed. Forsythe did this work often, going block by block, waving off the threats of traffickers. Tonight she gave the girls hugs. She told them they were loved. A 77th Street Division undercover car trailed behind, keeping an eye on Forsythe and offering her a place to warm up.</p>
 </div>
 
-image
+ <center>
+      <a> <img src="pantone.png" alt="Pantone colors" style="width:800px;height:600px;"> </a> 
+      <div> <p class="caption"> Pantone colors on ground. (Source: Pantone).</p> </div>
+</center>
 
 <div class="chapter"> 
   <p>Just after midnight, Officer Armendariz was out in her own undercover car looking for potential rescues. She turned onto 68th and saw the hot pink. “Youthful-looking female on Six-eight, west side of the street,” she said into the radio. Then she turned to Navarro in the driver’s seat. “Look how skinny this girl is,” she whispered. “Thin as hell.”</p>
@@ -245,7 +263,11 @@ image
 <p>Ana did not bother to run. She knew the stop would be quick: The 77th Street Division’s vice unit did not have the capacity to apprehend girls over 18. “Code 4,” he said into the radio: Situation resolved. “She’s 19 years old.” His partner unclasped her handcuffs. She was free to go.</p>
 <p>From the end of the block, it was too dark for Forsythe to see much, but there was something familiar about that emaciated-looking girl they were releasing. It was the funny little shimmy the girl was doing to try to keep warm. That was something her sweet Ana used to do.</p>
 </div>
- image
+
+ <center>
+      <a> <img src="pantone.png" alt="Pantone colors" style="width:800px;height:600px;"> </a> 
+      <div> <p class="caption"> Pantone colors on ground. (Source: Pantone).</p> </div>
+</center>
 
 
  <div class="chapter"> 
@@ -271,7 +293,10 @@ image
 </div>
 
 
-image
+ <center>
+      <a> <img src="pantone.png" alt="Pantone colors" style="width:800px;height:600px;"> </a> 
+      <div> <p class="caption"> Pantone colors on ground. (Source: Pantone).</p> </div>
+</center>
 
  <div class="chapter"> 
   <p>It was 2:18 in the morning, and Armendariz had one last job. She brought Ana an Oreo ice-cream sandwich, then led her and Forsythe to Interview Room 217. Ana rubbed her palms together anxiously. The room felt hot, and the fluorescent lights too bright. She was exhausted and ashamed and afraid, all at once. She did not want to talk about the past year, or the past week, or her long list of traffickers.</p>
@@ -301,7 +326,7 @@ image
 </div> <!-- Main container end-->
 
 <footer class="text-center mt-4 py-4 bg-dark text-white">
-  <p>&copy; THIS IS A FOOTER</p>
+  <p>&copy; The LA Star</p>
 </footer>
 
 </body>
