--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -119,7 +119,11 @@
 <p>Eventually, she and her sister ran away together. Their first night living on the street, Ana was raped by a stranger, she says, but she kept running. If they were going to be on the move, they wanted it to be on their own terms.</p>
 <p>At every house transfer or juncture, Ana had a hope — however dwindling — that her mother might make good on her promise to get them back. Then, at 13, in the early months that Ana was being trafficked, she called her mom for help. She had already lost track of her sister. This time, her mother was much more direct: If Ana had gotten herself into “the game,” as she called it, she would need to get herself out. Ana didn’t know how. She scraped the braces off her teeth with nail clippers to hide her age and settled in.</p>
 </div>
- image
+
+ <center>
+      <a> <img src="pantone.png" alt="Pantone colors" style="width:800px;height:600px;"> </a> 
+      <div> <p class="caption"> Pantone colors on ground. (Source: Pantone).</p> </div>
+</center>
 
  <div class="chapter"> 
   <p>To Ana’s mild surprise, no one from the child-welfare department seemed to come looking for her, either. She wondered if they were relieved to be dealing with one fewer foster kid. It was true that California’s foster care system was buckling under the weight of demand. There were too many children, too few good homes and a caseworker turnover so high that it was nearly impossible to keep track of kids who went missing.</p>
