--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -102,6 +102,11 @@
    <p>“Female running northbound,” she said into the radio suddenly, glancing over at her sergeant, Alvaro Navarro, in the driver’s seat and giving him a nod. He threw the car into reverse, then jerked forward, cutting across the intersection to trail the girl with the white bow, who had broken into a sprint, her sandals flung off half a block back.</p>
    <p>“I’ve got her hooking that left, going westbound on Seven-seven,” Armendariz said, swearing under her breath as the girl disappeared around a corner. But two patrol cars converged from different coordinates, throwing their doors open and locking her in.</p>
 
+<!-- Blockquote-->
+<blockquote> <p class="Blockquote"> “Drugs are sold once and gone forever, but girls can be resold indefinitely,”  </p></blockquote>
+<!-- Blockquote end-->
+
+
   <p>For the 77th Street Division, which covers the northern half of the Figueroa Corridor, prostitution had always been a problem. But in recent years, the officers had seen the magnitude of child sex trafficking explode. Part of that boom happened during the pandemic, when many girls were out of school and immersed in social media, where traffickers lurked. Teachers who would ordinarily follow up on absences or report signs of neglect could not.</p>
 <p>Gangs that had long sold drugs began to take advantage of Figueroa’s lucrative opportunity. With a dozen girls, one trafficker could easily make $12,000 a night. “Drugs are sold once and gone forever, but girls can be resold indefinitely,” said Navarro, who had been in the division for two decades. Motel owners who noticed the parades of customers but feared the gangs’ retribution kept quiet.</p>
 <p>As trafficking grew, the means to deal with it shrank. In 2021, the Police Department’s central human-trafficking unit was disbanded following budget cuts, leaving each division fewer resources to tackle the problem. According to Navarro, the 77th Street Division was supposed to have six investigators at Armendariz’s rank in its vice unit. Instead, she was the only one.</p>
