--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -103,7 +103,7 @@
    <p>“I’ve got her hooking that left, going westbound on Seven-seven,” Armendariz said, swearing under her breath as the girl disappeared around a corner. But two patrol cars converged from different coordinates, throwing their doors open and locking her in.</p>
 
 <!-- Blockquote-->
-<blockquote> <p class="Blockquote"> “Drugs are sold once and gone forever, but girls can be resold indefinitely,”  </p></blockquote>
+<blockquote> <p class="Blockquote"> “Drugs are sold once and gone forever, but girls can be resold indefinitely”  </p></blockquote>
 <!-- Blockquote end-->
 
 
@@ -154,7 +154,14 @@ Within a week in the new position, she was galvanized. She could not believe wha
 <div class="chapter"> 
   <p>She wanted evidence to put traffickers behind bars. She worked overtime and conducted rescue operations even on her days off in the hopes of persuading girls to identify them. But the girls rarely complied. Most felt a deep psychological tie to their traffickers, the most consistent authority figure they had ever known. Others knew that flipping on them meant being hunted down as soon as their traffickers were released.</p>
   <p>Still, when the team brought girls into the unit — strung out on drugs, irate at the officers and desperate to get back to the Blade — Armendariz alone could often get through to them. She stocked chocolate bars and potato chips and gave them fuzzy socks to replace their stilettos. It was what she would have wanted at 13.</p>
-<p>Within eight months, Armendariz was promoted and became the senior officer in the unit, designing creative operations the team could run with its skeleton staff. Fueled by caffeine, nicotine and Tums, the team’s rescues shot up, from just 15 in 2023 — when SB 357 first took effect — to 54 in 2024 and a fast-rising 2025 figure set to surpass 100. There were days Armendariz took the team out at 6 a.m. and secured multiple rescues before 9. But there was also a depressing reality to the growing list: the number of repeat names.</p>
+
+
+  <!-- Blockquote-->
+<blockquote> <p class="Blockquote">  “You get into something with somebody, and you think it’s one thing — I thought totally wrong.” </p></blockquote>
+<!-- Blockquote end-->
+
+
+  <p>Within eight months, Armendariz was promoted and became the senior officer in the unit, designing creative operations the team could run with its skeleton staff. Fueled by caffeine, nicotine and Tums, the team’s rescues shot up, from just 15 in 2023 — when SB 357 first took effect — to 54 in 2024 and a fast-rising 2025 figure set to surpass 100. There were days Armendariz took the team out at 6 a.m. and secured multiple rescues before 9. But there was also a depressing reality to the growing list: the number of repeat names.</p>
 <p>Earlier that night, officers pulled Ajena, 15, from the Blade for the third time. Armendariz had never met a child with such street loyalty. Ajena’s trafficker had just hours earlier split her lip, because she smirked at him, and threatened to shoot her in the leg if she walked away. She still spit on the officer who asked her to share his identity, and when her cellphone rang, his contact came up as “Daddy.”</p>
 <p>Destiny, also 15, was brought in so often that she knew the vice unit’s sour-candy inventory. Armendariz filed yet another report on her this week. When an officer asked for Destiny’s address, she threw her head back, snorting with laughter. “If I lived somewhere, I wouldn’t be out here,” she said. Destiny told officers she hadn’t seen her foster care case manager, who was supposed to be doing monthly meet-ups, in more than two years.</p>
 <p>It was a similar cycle of rescues with Ashley, and Kayla, and Saphira, and Malaika and Margie Ruth. After interviewing each girl, Armendariz kept her company for hours until someone from the Department of Children and Family Services came to pick her up. In theory, D.C.F.S. staff would take the girl to a hospital for a health screening and then to a temporary housing placement, before ultimately finding her a new foster household or group home. But time after time, the agency reported back to Armendariz that the girl had jumped from the car as soon as it pulled out of the station. The agency estimates that three out of four rescued preteens and teenagers go back to their traffickers. (Brandon Nichols, the director of the county’s D.C.F.S., said that “our social workers do everything possible, as many times as necessary, to help these young people safely leave their captors and begin healing on their own terms.”)</p>
