--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -103,7 +103,7 @@
    <p>“I’ve got her hooking that left, going westbound on Seven-seven,” Armendariz said, swearing under her breath as the girl disappeared around a corner. But two patrol cars converged from different coordinates, throwing their doors open and locking her in.</p>
 
 <!-- Blockquote-->
-<blockquote> <p class="Blockquote"> “Drugs are sold once and gone forever, but girls can be resold indefinitely”  </p></blockquote>
+<blockquote> <p class="blockquote"> “Drugs are sold once and gone forever, but girls can be resold indefinitely”  </p></blockquote>
 <!-- Blockquote end-->
 
 
