--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -55,14 +55,12 @@
 <a> <img src="TheLAStarDraft.png" alt="The LA Star" style="width:1200px;height:200px;"> </a> 
 <div class="headline"> <h1> Can Anyone Rescue the Trafficked Girls of L.A.’s Figueroa Street?</h1></div>
 <div class ="subhead"> <h3> An investigation into the city’s failed attempts to curb prostitution and human trafficking along one of its most notorious corridors. </h3></div>
-<div class="byline"> <p> By: Jane Doe</p></div>
+<div class="byline"> <p> By: Jane Doe</p> <p> Date: Oct 26, 2025</p></div>
 
  <center>
       <a> <img src="pantone.png" alt="Pantone colors" style="width:800px;height:600px;"> </a> 
       <div> <p class="caption"> Pantone colors on ground. (Source: Pantone).</p> </div>
 </center>
-
-<div class="chaptertitle"> <h2> CHAPTER HEADLINE</h2></div>
 
 <div class="chapter"> 
   <p> Ana paced on the sidewalk at 68th and Figueroa, her front teeth missing and an ostomy bag taped down under her hot pink lingerie. </p>
