--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -55,7 +55,7 @@
 <a> <img src="TheLAStarDraft.png" alt="The LA Star" style="width:1200px;height:200px;"> </a> 
 <div class="headline"> <h1> Can Anyone Rescue the Trafficked Girls of L.A.’s Figueroa Street?</h1></div>
 <div class ="subhead"> <h3> An investigation into the city’s failed attempts to curb prostitution and human trafficking along one of its most notorious corridors. </h3></div>
-<div class="byline"> <p> By: Jane Doe</p> <p> Date: Oct 26, 2025</p></div>
+<div class="byline"> <p> By Jane Doe</p> <p> Published Oct 26, 2025</p></div>
 
  <center>
       <a> <img src="pantone.png" alt="Pantone colors" style="width:800px;height:600px;"> </a> 
