--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -79,7 +79,7 @@
   <p>When he left, Ana plodded over to her own trafficker to ask for a break. The answer was no. Ana took some Percocets and chased them with Hennessy to numb herself. The temperature dropped, and soon she felt herself longing for another customer’s car, just to get out of the cold.</p>
 </div>
 
-<a> <img src="CarDraft.png" alt="Line of cars drawing" style="width:1300px;height:200px;"> </a> 
+<a> <img src="purplecar.jpg" alt="Purple car on road" style="width:1300px;height:200px;"> </a> 
 
 
 <div class="chapter"> 
@@ -118,7 +118,7 @@
 <p>“Female detained,” she said into the radio. “Thank you, guys.”</p>
 </div>
 
-<a> <img src="CarDraft.png" alt="Line of cars drawing" style="width:1300px;height:200px;"> </a> 
+<a> <img src="carandgirl.jpg" alt="Working girl stopping at car" style="width:1300px;height:200px;"> </a> 
 
 <div class="chapter"> 
   <p> Ana had been an easy target for trafficking. As a child, she bounced among apartments and shelters with her alcoholic mother. Her violent father was in and out of their lives. She was taken away by child protective services for the first time at age 8, and then shuttled for years among foster households and group homes in a county that neighbored Los Angeles — sometimes with her siblings, sometimes without. There was never any sense of belonging.</p>
@@ -139,7 +139,7 @@
 <p>There was a familiarity to the chaos and dysfunction here, a commonality among the girls that Ana could only see now that she was older. They were children who presumably belonged to somebody — but nobody seemed to be looking for them. In a way, that made Fig feel like home.</p>
 </div>
 
-<a> <img src="CarDraft.png" alt="Line of cars drawing" style="width:1300px;height:200px;"> </a> 
+<a> <img src="cash.jpg" alt="Stack of cash" style="width:1300px;height:200px;"> </a> 
 
  <div class="chapter"> 
   <p>After the rescue at 77th Street, Armendariz headed back to the station to start paperwork. The number of rescues in the past few months had far surpassed any in the division’s recent history, but that meant she was always buried in reports.</p>
@@ -182,7 +182,7 @@ Within a week in the new position, she was galvanized. She could not believe wha
 <p>Armendariz would call D.C.F.S. for the girl and then return to Figueroa later that night. Eventually, the girl with the hair bow would, too.</p>
 </div>
 
-<a> <img src="CarDraft.png" alt="Line of cars drawing" style="width:1300px;height:200px;"> </a> 
+<a> <img src="pills.jpg" alt="Pills spilling out of a pill bottle" style="width:1300px;height:200px;"> </a> 
 
  <div class="chapter"> 
   <p>The thing about Ana was that she had been rescued before, and she had gotten closer to freedom than just about anybody else.</p>
@@ -212,7 +212,7 @@ Within a week in the new position, she was galvanized. She could not believe wha
 <p>Life away from Fig had turned out to be both hard and complicated. Life back on Fig was hard, but simple.</p>
 </div>
 
-<a> <img src="CarDraft.png" alt="Line of cars drawing" style="width:1300px;height:200px;"> </a> 
+<a> <img src="handcuffs.jpg" alt="Pair of handcuffs" style="width:1300px;height:200px;"> </a> 
 
 <div class="chapter"> 
   <p>On Thursday night, Armendariz stood at 70th and Figueroa in a black mesh top and pumps, her purse outfitted with a recording device. She dangled a strip of condoms from her bra strap. She knew there was only so much evidence she could gather secondhand, and at 4-foot-10, Armendariz could pass as a juvenile in the dark. Now cars were lining up for her.</p>
@@ -255,7 +255,7 @@ Within a week in the new position, she was galvanized. She could not believe wha
 <p>Armendariz was irritated. She had been careful not to dwell on the dangers of this work — she had seen far too many officers miss out on felony arrests because of fear. It bothered her when the men in the unit trusted their instincts over her signals. If little girls were fending for themselves on the Blade, surely she could, too.</p>
 </div>
 
-<a> <img src="CarDraft.png" alt="Line of cars drawing" style="width:1300px;height:200px;"> </a> 
+<a> <img src="textphone.PNG" alt="Forsythe texting Ana" style="width:1300px;height:200px;"> </a> 
 
 
 <div class="chapter"> 
@@ -301,7 +301,7 @@ Within a week in the new position, she was galvanized. She could not believe wha
 <p>“Ana, do you want to come home?”</p>
 </div>
 
-<a> <img src="CarDraft.png" alt="Line of cars drawing" style="width:1300px;height:200px;"> </a> 
+<a> <img src="drawpicture.PNG" alt="Child-like drawing of house and purple unicorn" style="width:1300px;height:200px;"> </a> 
 
  <div class="chapter"> 
   <p>Armendariz had heard the whole thing play out over the radio and turned the corner just in time to see Forsythe helping Ana into a police car.</p>
