--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -58,8 +58,8 @@
 <div class="byline"> <p> By Jane Doe</p> <p> Published Oct 26, 2025</p></div>
 
  <center>
-      <a> <img src="pantone.png" alt="Pantone colors" style="width:800px;height:600px;"> </a> 
-      <div> <p class="caption"> Pantone colors on ground. (Source: Pantone).</p> </div>
+      <a> <img src="LAarrest.webp" alt="Group of women being arrested" style="width:800px;height:600px;"> </a> 
+      <div> <p class="caption"> A group of women being arrested for alleged solicitation. (Jane Doe | The LA Star).</p> </div>
 </center>
 
 <div class="chapter"> 
