--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -127,8 +127,8 @@
 </div>
 
  <center>
-      <a> <img src="pantone.png" alt="Pantone colors" style="width:800px;height:600px;"> </a> 
-      <div> <p class="caption"> Pantone colors on ground. (Source: Pantone).</p> </div>
+      <a> <img src="heels.jpg" alt="Three women in pleaser heels" style="width:800px;height:600px;"> </a> 
+      <div> <p class="caption"> Three women working on Figueroa Street in Los Angeles, California. (Jane Doe | The LA Star).</p> </div>
 </center>
 
  <div class="chapter"> 
@@ -148,8 +148,8 @@ Within a week in the new position, she was galvanized. She could not believe wha
  </div>
 
  <center>
-      <a> <img src="pantone.png" alt="Pantone colors" style="width:800px;height:600px;"> </a> 
-      <div> <p class="caption"> Pantone colors on ground. (Source: Pantone).</p> </div>
+      <a> <img src="nails.png" alt="Woman arrested and behind bars" style="width:800px;height:600px;"> </a> 
+      <div> <p class="caption"> Woman arrested for alleged solicitation hold her hands outside a jail cell. (Jane Doe | The LA Star).</p> </div>
 </center>
 
 <div class="chapter"> 
