--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -219,8 +219,8 @@ Within a week in the new position, she was galvanized. She could not believe wha
 </div>
 
  <center>
-      <a> <img src="pantone.png" alt="Pantone colors" style="width:800px;height:600px;"> </a> 
-      <div> <p class="caption"> Pantone colors on ground. (Source: Pantone).</p> </div>
+      <a> <img src="hookercondoms.webp" alt="Woman holding condoms" style="width:800px;height:600px;"> </a> 
+      <div> <p class="caption"> Woman holding condoms while working on Figueroa Street. (Jane Doe | The LA Star).</p> </div>
 </center>
 
 <div class="chapter"> 
