--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -169,8 +169,8 @@ Within a week in the new position, she was galvanized. She could not believe wha
 </div>
 
  <center>
-      <a> <img src="pantone.png" alt="Pantone colors" style="width:800px;height:600px;"> </a> 
-      <div> <p class="caption"> Pantone colors on ground. (Source: Pantone).</p> </div>
+      <a> <img src="arrest.webp" alt="Group of women being arrested" style="width:800px;height:600px;"> </a> 
+      <div> <p class="caption"> A group of women being arrested for alleged solicitation. (Jane Doe | The LA Star).</p> </div>
 </center>
 
  <div class="chapter"> 
@@ -196,8 +196,8 @@ Within a week in the new position, she was galvanized. She could not believe wha
 
 
  <center>
-      <a> <img src="pantone.png" alt="Pantone colors" style="width:800px;height:600px;"> </a> 
-      <div> <p class="caption"> Pantone colors on ground. (Source: Pantone).</p> </div>
+      <a> <img src="LAbladeworker.jpeg" alt="Woman standing in the street" style="width:800px;height:600px;"> </a> 
+      <div> <p class="caption"> Woman working the streets of The Blade in Los Angeles. (Jane Doe | The LA Star).</p> </div>
 </center>
 
  <div class="chapter"> 
@@ -268,8 +268,8 @@ Within a week in the new position, she was galvanized. She could not believe wha
 </div>
 
  <center>
-      <a> <img src="pantone.png" alt="Pantone colors" style="width:800px;height:600px;"> </a> 
-      <div> <p class="caption"> Pantone colors on ground. (Source: Pantone).</p> </div>
+      <a> <img src="lapdarrest.webp" alt="Woman getting arrested by the police" style="width:800px;height:600px;"> </a> 
+      <div> <p class="caption"> Alleged sex worker being arrested by the LAPD on Figueroa Street in Los Angeles. (Jane Doe | The LA Star).</p> </div>
 </center>
 
 <div class="chapter"> 
