--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -240,8 +240,8 @@ Within a week in the new position, she was galvanized. She could not believe wha
 </div>
 
  <center>
-      <a> <img src="pantone.png" alt="Pantone colors" style="width:800px;height:600px;"> </a> 
-      <div> <p class="caption"> Pantone colors on ground. (Source: Pantone).</p> </div>
+      <a> <img src="solicitation.jpg" alt="Woman collecting money" style="width:800px;height:600px;"> </a> 
+      <div> <p class="caption"> Alleged prostitute collecting money from a customer while working on The Blade. (Jane Doe | The LA Star).</p> </div>
 </center>
 
 <div class="chapter"> 
