--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -286,8 +286,8 @@ Within a week in the new position, she was galvanized. She could not believe wha
 </div>
 
  <center>
-      <a> <img src="pantone.png" alt="Pantone colors" style="width:800px;height:600px;"> </a> 
-      <div> <p class="caption"> Pantone colors on ground. (Source: Pantone).</p> </div>
+      <a> <img src="copcar.jpg" alt="LAPD vehicle" style="width:800px;height:600px;"> </a> 
+      <div> <p class="caption"> LAPD vehicle on patrol on Figueroa Street in Los Angeles. (Jane Doe | The LA Star).</p> </div>
 </center>
 
 
@@ -315,8 +315,8 @@ Within a week in the new position, she was galvanized. She could not believe wha
 
 
  <center>
-      <a> <img src="pantone.png" alt="Pantone colors" style="width:800px;height:600px;"> </a> 
-      <div> <p class="caption"> Pantone colors on ground. (Source: Pantone).</p> </div>
+      <a> <img src="policetape.jpeg" alt="Police tape" style="width:800px;height:600px;"> </a> 
+      <div> <p class="caption"> Police tape on Figueroa Street in Los Angeles. (Jane Doe | The LA Star).</p> </div>
 </center>
 
  <div class="chapter"> 
