--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -80,6 +80,8 @@
 </div>
 
 <a> <img src="purplecar.jpg" alt="Purple car on road" style="width:1300px;height:600px;"> </a> 
+      <div> <p class="caption"> Customer drives down The Blade in seach of girls. (Artwork courtesy of Cait Heiderman).</p> </div>
+
 
 
 <div class="chapter"> 
@@ -119,6 +121,8 @@
 </div>
 
 <a> <img src="carandgirl.jpg" alt="Working girl stopping at car" style="width:1300px;height:600px;"> </a> 
+      <div> <p class="caption"> Young woman stops to greet her customer. (Artwork courtesy of Cait Heiderman).</p> </div>
+
 
 <div class="chapter"> 
   <p> Ana had been an easy target for trafficking. As a child, she bounced among apartments and shelters with her alcoholic mother. Her violent father was in and out of their lives. She was taken away by child protective services for the first time at age 8, and then shuttled for years among foster households and group homes in a county that neighbored Los Angeles — sometimes with her siblings, sometimes without. There was never any sense of belonging.</p>
@@ -140,6 +144,8 @@
 </div>
 
 <a> <img src="cash.jpg" alt="Stack of cash" style="width:1300px;height:600px;"> </a> 
+      <div> <p class="caption"> Girls working on The Blade are expected to make money each night. (Artwork courtesy of Cait Heiderman).</p> </div>
+
 
  <div class="chapter"> 
   <p>After the rescue at 77th Street, Armendariz headed back to the station to start paperwork. The number of rescues in the past few months had far surpassed any in the division’s recent history, but that meant she was always buried in reports.</p>
@@ -182,7 +188,9 @@ Within a week in the new position, she was galvanized. She could not believe wha
 <p>Armendariz would call D.C.F.S. for the girl and then return to Figueroa later that night. Eventually, the girl with the hair bow would, too.</p>
 </div>
 
-<a> <img src="pills.jpg" alt="Pills spilling out of a pill bottle" style="width:1300px;height:600px;"> </a> 
+<a> <img src="pills.jpg" alt="Pills spilling out of a pill bottle" style="width:1300px;height:600px;"> </a>
+      <div> <p class="caption"> Girls working on The Blade take pills to get through the night. (Artwork courtesy of Cait Heiderman).</p> </div>
+
 
  <div class="chapter"> 
   <p>The thing about Ana was that she had been rescued before, and she had gotten closer to freedom than just about anybody else.</p>
@@ -213,6 +221,8 @@ Within a week in the new position, she was galvanized. She could not believe wha
 </div>
 
 <a> <img src="handcuffs.jpg" alt="Pair of handcuffs" style="width:1300px;height:600px;"> </a> 
+      <div> <p class="caption"> Handcuffs the LAPD uses to arrest alleged prostitutes on The Blade. (Artwork courtesy of Cait Heiderman).</p> </div>
+
 
 <div class="chapter"> 
   <p>On Thursday night, Armendariz stood at 70th and Figueroa in a black mesh top and pumps, her purse outfitted with a recording device. She dangled a strip of condoms from her bra strap. She knew there was only so much evidence she could gather secondhand, and at 4-foot-10, Armendariz could pass as a juvenile in the dark. Now cars were lining up for her.</p>
@@ -256,6 +266,8 @@ Within a week in the new position, she was galvanized. She could not believe wha
 </div>
 
 <a> <img src="textphone.PNG" alt="Forsythe texting Ana" style="width:1300px;height:600px;"> </a> 
+      <div> <p class="caption"> Ana recieves a text from Forsythe. (Artwork courtesy of Cait Heiderman).</p> </div>
+
 
 
 <div class="chapter"> 
@@ -302,6 +314,8 @@ Within a week in the new position, she was galvanized. She could not believe wha
 </div>
 
 <a> <img src="drawpicture.PNG" alt="Child-like drawing of house and purple unicorn" style="width:1300px;height:600px;"> </a> 
+      <div> <p class="caption"> After reconnecting with Forsythe, Ana is able to express how safety makes her feel. (Artwork courtesy of Cait Heiderman).</p> </div>
+
 
  <div class="chapter"> 
   <p>Armendariz had heard the whole thing play out over the radio and turned the corner just in time to see Forsythe helping Ana into a police car.</p>
