--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -345,6 +345,7 @@ Within a week in the new position, she was galvanized. She could not believe wha
 <div class="container">
   <div class="row">
     <div class="col-md-4 text-center"> 
+      <a img="link1.webp" href="https://www.latimes.com/california/story/2025-12-09/stockton-mass-shooting-update-masked-gunmen-fired-at-least-50-rounds-sheriff-says">
       <h3> Lorem ipsum</h3>
       </div>
 
