--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -18,6 +18,14 @@
 <!-- Bootstrap Icons -->
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
+ <style> 
+  @media screen and (max-width: 500px){ 
+    img { /*img under 500px*/
+    padding-bottom: 50px;
+}
+  } 
+</style>
+
 </head>
 
 <body>
