--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -19,11 +19,18 @@
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
  <style> 
-  @media screen and (max-width: 500px){ 
-    img { /*img under 500px*/
-    padding-bottom: 50px;
-}
-  } 
+      .responsive-image {
+      width: 100%;
+      height: auto;
+      object-fit: cover; /* Default for larger screens */
+    }
+
+    @media (max-width: 600px) {
+      .responsive-image {
+        object-fit: contain; /* Adjust for smaller screens */
+        max-width: 80%;
+      }
+    }
 </style>
 
 </head>
