--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -102,7 +102,7 @@
    <p>“I’ve got her hooking that left, going westbound on Seven-seven,” Armendariz said, swearing under her breath as the girl disappeared around a corner. But two patrol cars converged from different coordinates, throwing their doors open and locking her in.</p>
 
 <!-- Blockquote-->
-<blockquote> <p class="blockquote"> “Drugs are sold once and gone forever, but girls can be resold indefinitely”  </p></blockquote>
+<blockquote style="font-size: 40px"> <p class="blockquote"> “Drugs are sold once and gone forever, but girls can be resold indefinitely”  </p></blockquote>
 <!-- Blockquote end-->
 
 
@@ -164,7 +164,7 @@ Within a week in the new position, she was galvanized. She could not believe wha
 
 
   <!-- Blockquote-->
-<blockquote> <p class="Blockquote">  “You get into something with somebody, and you think it’s one thing — I thought totally wrong.” </p></blockquote>
+<blockquote style="font-size: 40px"> <p class="Blockquote">  “You get into something with somebody, and you think it’s one thing — I thought totally wrong.” </p></blockquote>
 <!-- Blockquote end-->
 
 
