--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -164,7 +164,7 @@ Within a week in the new position, she was galvanized. She could not believe wha
 
 
   <!-- Blockquote-->
-<blockquote> <p style="font-size: 40 px" class="Blockquote">  “You get into something with somebody, and you think it’s one thing — I thought totally wrong.” </p></blockquote>
+<blockquote> <p style="font-size: 40px" class="blockquote">  “You get into something with somebody, and you think it’s one thing — I thought totally wrong.” </p></blockquote>
 <!-- Blockquote end-->
 
 
