--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -101,8 +101,8 @@
    <p>“Female running northbound,” she said into the radio suddenly, glancing over at her sergeant, Alvaro Navarro, in the driver’s seat and giving him a nod. He threw the car into reverse, then jerked forward, cutting across the intersection to trail the girl with the white bow, who had broken into a sprint, her sandals flung off half a block back.</p>
    <p>“I’ve got her hooking that left, going westbound on Seven-seven,” Armendariz said, swearing under her breath as the girl disappeared around a corner. But two patrol cars converged from different coordinates, throwing their doors open and locking her in.</p>
 
-<!-- Blockquote-->
-<blockquote style="font-size: 40px"> <p class="blockquote"> “Drugs are sold once and gone forever, but girls can be resold indefinitely”  </p></blockquote>
+   <!-- Blockquote-->
+<blockquote> <p style="font-size: 40px" class="blockquote">  “Drugs are sold once and gone forever, but girls can be resold indefinitely” </p></blockquote>
 <!-- Blockquote end-->
 
 
