--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -345,18 +345,19 @@ Within a week in the new position, she was galvanized. She could not believe wha
 <div class="container">
   <div class="row">
     <div class="col-md-4 text-center"> 
-      <h3> Lorem ipsum</h3>
+      <h3> <a href="https://www.latimes.com/california/story/2025-12-09/homeless-services-ceo-steps-down-from-government-oversight-board-amid-scandal"> <img src="LAT1.webp" alt="">Homeless services CEO steps down from government oversight board amid scandal</a></h3>
       </div>
 
     <div class="col-md-4 text-center"> 
-      <h3> Lorem ipsum</h3>
+      <h3> <a href="#"></a>Lorem ipsum</a></h3>
       </div>
 
     <div class="col-md-4 text-center"> 
-      <h3> Lorem ipsum</h3>
+      <h3> <a href="#">Lorem ipsum</a></h3>
       </div>
+
   </div>
-</div> </div> </div>
+</div> </div>
 
 </div> <!-- Main container end-->
 
