--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -345,15 +345,15 @@ Within a week in the new position, she was galvanized. She could not believe wha
 <div class="container">
   <div class="row">
     <div class="col-md-4 text-center"> 
-      <h3> <a href="https://www.latimes.com/california/story/2025-12-09/homeless-services-ceo-steps-down-from-government-oversight-board-amid-scandal"> <img src="LAT1.webp" alt="">Homeless services CEO steps down from government oversight board amid scandal</a></h3>
+      <h3> <a href="https://www.latimes.com/california/story/2025-12-09/homeless-services-ceo-steps-down-from-government-oversight-board-amid-scandal"> <img src="LAT1.webp" alt="Man giving speech">Homeless services CEO steps down from government oversight board amid scandal</a></h3>
       </div>
 
     <div class="col-md-4 text-center"> 
-      <h3> <a href="#"></a>Lorem ipsum</a></h3>
+      <h3> <a href="https://www.latimes.com/california/story/2025-12-09/secure-rural-schools-act-california-schools-funding-forestry"> <img src="LAT2.webp" alt="Man holds phone to ear">Congress approves an economic lifeline for rural schools in California and elsewhere</a></h3>
       </div>
 
     <div class="col-md-4 text-center"> 
-      <h3> <a href="#">Lorem ipsum</a></h3>
+      <h3> <a href="https://www.latimes.com/california/story/2025-12-09/la-county-inspector-general-max-huntsman-retirement"> <img src="LAT3.webp" alt="Man in suit">L.A. County inspector general to retire after 12 years as Sheriff’s Department watchdog</a></h3>
       </div>
 
   </div>
