--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -24,7 +24,7 @@
  <!-- Navbar start-->
  <nav class="navbar navbar-expand-lg navbar-dark bg-black">
    <div class="container-fluid">
-     <a class="navbar-brand" href="#">The LA Star</a>
+     <a class="navbar-brand" href="https://www.latimes.com/">The LA Star</a>
      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
        <span class="navbar-toggler-icon"></span>
      </button>
@@ -33,15 +33,15 @@
        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
          <li class="nav-item">
-           <a class="nav-link active" aria-current="page" href="#">Current issue</a>
+           <a class="nav-link active" aria-current="page" href="https://www.latimes.com/topic/california-law-politics">California Politics</a>
          </li>
 
           <li class="nav-item">
-           <a class="nav-link active" aria-current="page" href="#">Past issues</a>
+           <a class="nav-link active" aria-current="page" href="https://www.latimes.com/topic/la-politics">L.A. Politics</a>
          </li>
 
           <li class="nav-item">
-           <a class="nav-link active" aria-current="page" href="#">Follow us</a>
+           <a class="nav-link active" aria-current="page" href="https://www.latimes.com/espanol/">L.A. Star En Espanol</a>
           </li>
        </ul>
        
