--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -342,6 +342,7 @@ Within a week in the new position, she was galvanized. She could not believe wha
 
 
 <!-- Three column section start-->
+ <p> <h2 class="text-center mt-4"> More from The LA Star </h2> </p>
 <div class="container">
   <div class="row">
     <div class="col-md-4 text-center"> 
