--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -52,6 +52,7 @@
 
  <div class="container">  <!-- Main container start-->
 
+  <div class="narrow"> <!-- Narrow class start-->
 <a> <img src="TheLAStarDraft.png" alt="The LA Star" style="width:1200px;height:200px;"> </a> 
 <div class="headline"> <h1> Can Anyone Rescue the Trafficked Girls of L.A.’s Figueroa Street?</h1></div>
 <div class ="subhead"> <h3> An investigation into the city’s failed attempts to curb prostitution and human trafficking along one of its most notorious corridors. </h3></div>
@@ -360,6 +361,7 @@ Within a week in the new position, she was galvanized. She could not believe wha
   </div>
 </div> </div>
 
+ </div>
 </div> <!-- Main container end-->
 
 <footer class="text-center mt-4 py-4 bg-dark text-white">
