--- a/html-frame/html-frame.html
+++ b/html-frame/html-frame.html
@@ -52,7 +52,8 @@
 
  <div class="container">  <!-- Main container start-->
 
-  <div class="narrow"> <!-- Narrow class start-->
+  <div id="narrow"> <!-- Narrow class start-->
+
 <a> <img src="TheLAStarDraft.png" alt="The LA Star" style="width:1200px;height:200px;"> </a> 
 <div class="headline"> <h1> Can Anyone Rescue the Trafficked Girls of L.A.’s Figueroa Street?</h1></div>
 <div class ="subhead"> <h3> An investigation into the city’s failed attempts to curb prostitution and human trafficking along one of its most notorious corridors. </h3></div>
